<resources>
    <string name="Search_">Search</string>
    <string name="_1299">$ 1299</string>
    <string name="_1_year">1 Year</string>
    <string name="_2500">$2500</string>
    <string name="_3_days_trial">3 Days Trial</string>
    <string name="_3_months">3 Months</string>
    <string name="a_hour_ago">1 hour ago</string>
    <string name="a_min_ago">1 minute ago</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app">About App</string>
    <string name="accept">Accept</string>
    <string name="accepting">Accepting...</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_event">Add Event</string>
    <string name="ads_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="advanced_analytics_on_your_codes">Advanced analytics on your codes</string>
    <string name="and">and</string>
    <string name="app_name">QR Code Barcode Creator &amp; Reader</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_want_to_unfavourite_this_link">Are you sure, you want to unfavourite?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure, You want to delete?</string>
    <string name="attachment">Attachment</string>
    <string name="banner_ui_id">ca-app-pub-banner</string>
    <string name="barcode">Barcode</string>
    <string name="base64encodedpublickey" />
    <string name="batch_scan_amp_pin_protect">Batch Scan &amp; Pin Protect</string>
    <string name="book_code">Book Code</string>
    <string name="book_name">Book Name</string>
    <string name="book_price">Book Price</string>
    <string name="book_starting_with">Book code start with 978 and 979</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="by_date">By Date</string>
    <string name="by_tapping_accept_you_agree_to_qr_barcode_scanner_n_privacy_policy_and_terms_of_service">By tapping Accept, you agree to QR &amp; Barcode Scanner Privacy Policy and Terms of Service</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_created">Calendar Created Successfully</string>
    <string name="call">Call</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact">Contact</string>
    <string name="contact_created">Contact Created Successfully</string>
    <string name="contact_mail">qrcodepro_support_team@gmail.com</string>
    <string name="contact_number">+18798989898</string>
    <string name="contact_us">Contact Us</string>
    <string name="copy">Copy</string>
    <string name="copy_password">Copy Password</string>
    <string name="copyed">copied</string>
    <string name="cound_not_find_any_informate">"Sorry couldn't find any information"</string>
    <string name="create">Create</string>
    <string name="create_calendar">Create Calendar</string>
    <string name="create_contact">Create Contact</string>
    <string name="create_email">Create Email</string>
    <string name="create_facebook">Create Facebook</string>
    <string name="create_instagram">Create Instagram</string>
    <string name="create_isbn">Create ISBN</string>
    <string name="create_item">Create Item/Product</string>
    <string name="create_location">Create Location</string>
    <string name="create_phone">Create Phone</string>
    <string name="create_qr_barcode">Create QR &amp; Barcode</string>
    <string name="create_sms">Create SMS</string>
    <string name="create_spotify">Create Spotify</string>
    <string name="create_text">Create Text</string>
    <string name="create_twitter">Create Twitter</string>
    <string name="create_url">Create URL</string>
    <string name="create_viber">Create Viber</string>
    <string name="create_whatsapp">Create Whatsapp</string>
    <string name="create_wifi">Create Wi-Fi</string>
    <string name="created">Created</string>
    <string name="creating">Creating...</string>
    <string name="custom_qr_codes">Custom QR Codes</string>
    <string name="days_ago">" days ago"</string>
    <string name="decoding">Fetching Information...</string>
    <string name="default_web_client_id">970661767-d9qkg4jc2o0vjb7sh72q2uqtjiu2ebk3.apps.googleusercontent.com</string>
    <string name="done">Done</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, ius eu rebum dicam, doming vituperata omittantur id nam, duo ea putent praesent suavitate. Qualisque explicari nec ne. Eam ignota omnium instructior ei, dicam suavitate an nam, id perfecto sententiae intellegebat duo. His prima argumentum scripserit id, an mel scripta volumus. An nec iudico nusquam consetetur. An detracto pericula consectetuer his. Usu etiam audiam iuvaret no. Eos quodsi ancillae ad, quas electram ne pri, mei suas vide principes no. Accusata sensibus an nam. Ex his dicta melius probatus. No has agam laoreet eligendi. Sea dicit invenire oportere id. Has bonorum meliore principes an, ius ex impetus delenit labores, viris quodsi virtute vis ut. Affert signiferumque ex qui. Accusata sensibus an nam. Ex his dicta melius probatus. No has agam laoreet eligendi.</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="email_created">Email Created Successfully</string>
    <string name="end_date">End Date</string>
    <string name="enter_text_here">Enter text here...</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_created">Facebook Created Successfully</string>
    <string name="fastscroll__app_name">RecyclerViewFastScroll</string>
    <string name="favorite">Favorite</string>
    <string name="featching">Featching...</string>
    <string name="feedback">Feedback</string>
    <string name="feel_free_to_check_out_the_terms_of_use_and_the_privacy_policy">Feel free to check out the Terms of use and the Privacy Policy.</string>
    <string name="filter">Filter</string>
    <string name="firebase_database_url">https://qrcodebarcode007.firebaseio.com</string>
    <string name="lock_app">Lock App</string>
    <string name="no_ads">No Ads</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="pro_long_msg">"Payment will be charged to Google Account at confirmation of purchase. Subscription automatically renews unless auto-renew is turned off at least 24-hours before the end of the current period. Account will be charged for renewal within 24-hours prior t the end of the current period, and identify the cost of the renewal. Subscriptions may be managed by the user and auto-renewal may be turned off by going to the user's Account Settings after purchase. Any unused portion of a free trial period, if offered, will be forteited when the user purchases a subscription to that publication, where applicable.
Length of Subscription: 1 Year
Price: Free for 3 days,then €73.20 yearly after free trial."</string>
    <string name="pro_offer">Pro Offer</string>
    <string name="qr_barcode_scanner">"QR &amp; Barcode
Scanner"</string>
    <string name="rate_us">Rate Us</string>
    <string name="restore">Restore</string>
    <string name="share_app">Share App</string>
    <string name="sound">Sound</string>
    <string name="subscribe_now">Subscribe now</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="then_64_99_yearly">Then €73.20 Yearly</string>
    <string name="top_version">Top Version</string>
    <string name="try_3_days_for_free">Try 3 days for free</string>
    <string name="unlimited_scans">Unlimited Scans</string>
    <string name="unlock_all_features">Unlock all features</string>
    <string name="unlock_all_features_in_the_application">Unlock all features in the application</string>
    <string name="vibration">Vibration</string>
</resources>