<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/header_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/back_iv" android:padding="@dimen/dp10" android:visibility="gone" android:layout_width="@dimen/dp40" android:layout_height="@dimen/dp40" android:src="@drawable/qr7_close_black_without_outline" android:tint="@color/dark_grey" />
        <TextView android:id="@id/tv_restore" android:padding="@dimen/dp10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/restore" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView android:id="@id/ns" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/header_layout">
        <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/dp30" android:paddingBottom="@dimen/dp30" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="@dimen/dp100" android:layout_height="@dimen/dp100" android:src="@drawable/qr7_logo_red" />
            <TextView android:textSize="@dimen/sp18" android:textColor="@color/black" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp20" android:text="@string/top_version" android:fontFamily="@font/ttnorms_bold" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp10" android:layout_marginStart="@dimen/dp30" android:layout_marginEnd="@dimen/dp30">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp10" android:layout_marginBottom="@dimen/dp10">
                    <ImageView android:layout_gravity="center_vertical" android:layout_width="@dimen/dp25" android:layout_height="@dimen/dp25" android:layout_marginLeft="@dimen/dp15" android:src="@drawable/qr7_advantage_star" android:layout_marginStart="@dimen/dp15" />
                    <TextView android:textSize="@dimen/sp16" android:textColor="@color/advance_color" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp10" android:layout_marginRight="@dimen/dp10" android:text="@string/no_ads" android:layout_marginStart="@dimen/dp10" android:layout_marginEnd="@dimen/dp10" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp10" android:layout_marginBottom="@dimen/dp10">
                    <ImageView android:layout_gravity="center_vertical" android:layout_width="@dimen/dp25" android:layout_height="@dimen/dp25" android:layout_marginLeft="@dimen/dp15" android:src="@drawable/qr7_advantage_star" android:layout_marginStart="@dimen/dp15" />
                    <TextView android:textSize="@dimen/sp16" android:textColor="@color/advance_color" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp10" android:layout_marginRight="@dimen/dp10" android:text="@string/unlimited_scans" android:layout_marginStart="@dimen/dp10" android:layout_marginEnd="@dimen/dp10" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp10" android:layout_marginBottom="@dimen/dp10">
                    <ImageView android:layout_gravity="center_vertical" android:layout_width="@dimen/dp25" android:layout_height="@dimen/dp25" android:layout_marginLeft="@dimen/dp15" android:src="@drawable/qr7_advantage_star" android:layout_marginStart="@dimen/dp15" />
                    <TextView android:textSize="@dimen/sp16" android:textColor="@color/advance_color" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp10" android:layout_marginRight="@dimen/dp10" android:text="@string/unlock_all_features" android:layout_marginStart="@dimen/dp10" android:layout_marginEnd="@dimen/dp10" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="@dimen/sp18" android:textColor="@color/coffiee" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp10" android:text="@string/try_3_days_for_free" android:fontFamily="@font/ttnorms_bold" />
            <TextView android:textSize="@dimen/sp16" android:textColor="@color/coffiee" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/then_64_99_yearly" android:fontFamily="@font/ttnorms_regular" />
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/get_started_btn" android:background="@drawable/sp_btn_green" android:padding="@dimen/dp5" android:layout_width="fill_parent" android:layout_height="@dimen/dp50" android:layout_marginTop="@dimen/dp20" android:layout_marginStart="@dimen/dp10" android:layout_marginEnd="@dimen/dp10">
                <TextView android:textSize="@dimen/sp20" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/subscribe_now" android:fontFamily="@font/ttnorms_bold" />
            </LinearLayout>
            <TextView android:textSize="@dimen/sp14" android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp20" android:text="@string/pro_long_msg" android:fontFamily="@font/ttnorms_regular" android:layout_marginStart="@dimen/dp10" android:layout_marginEnd="@dimen/dp10" />
            <TextView android:textSize="@dimen/sp14" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_btn_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp20" android:text="@string/feel_free_to_check_out_the_terms_of_use_and_the_privacy_policy" android:fontFamily="@font/ttnorms_regular" android:layout_marginStart="@dimen/dp10" android:layout_marginEnd="@dimen/dp10" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>